# agent-routing-kit

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  USAGE.md  pyproject.toml
.codex-plugin/: plugin.json
.github/workflows/: ci.yml  release-artifacts.yml
docs/brand/: README.md
examples/: demo.py
scripts/: route_task.py
skills/agent-routing-kit/: SKILL.md
src/agent_routing_kit/: __init__.py  budget.py  cli.py  routing.py
tests/: test_routing.py
